# house-price-prediction

./: .gitignore
package/: pyproject.toml
package/notebooks/: test copy.ipynb  test.ipynb
package/package/: entrypoints.py
package/package/configs/: training.yaml
package/package/data/: base.py  datasets.py  feature_metadata.csv  feature_processing.py
package/package/inference/: score.py
package/package/training/: base.py  models.py  utils.py
package/package/utils/: exp_tracking.py  file_system.py  image.py
