[tool.poetry]
name = "package"
version = "0.1.0"
description = ""
authors = ["Manuel Gil <manuelgilsitio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
mlflow = "^2.21.3"
ipython = "^9.1.0"
jupyter = "^1.1.1"
keras = "^3.9.2"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "^2.19.0"
numpy = "1.26.0"
pydot = "^3.0.4"
graphviz = "^0.20.3"
visualkeras = "^0.1.4"
opencv-python = "^4.11.0.86"
shap = "^0.47.1"

[tool.poetry.scripts]
test = "package.entrypoints:test"
train = "package.entrypoints:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
